--- a/services/app-access-service.yml
+++ b/services/app-access-service.yml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: todoapp-service
+  name: app-access-service
 spec:
   type: NodePort
   ports:
     - port: 5000 #target port is assumed to be the same as port
+      nodePort: 30000
       protocol: TCP
+
   selector:
     app: todoapp
